# pickle-blosc

./: .appveyor.yml  .travis.yml  MANIFEST.in  README.md  filename.pkl  requirements.txt  setup.cfg  setup.py
ci/: before-build-linux  before-build-win.bat  set-win-path.bat
pickle_blosc/: __init__.py  _core.py  _testit.py
pickle_blosc/test/: test_pickle_blosc.py
travis/: install_blosc.sh  install_python_blosc.sh
